# QuantEngine

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  quantengine.example.yaml
docs/: external-reader-guide.md  index.md  quickstart.md
docs/api/: cli.md  python-api.md
docs/architecture/: module-map.md  overview.md
docs/decisions/: 000-template.md  001-v4-signal-generation-architecture.md  002-framework-risk-mode-split.md  003-batch-sim-margin-performance.md  004-walk-forward-window-params.md  005-parallelism-strategy.md  006-objective-function-design.md  007-sprint0-trackb-gpu-batch.md  008-sprint2-audit-bundle-roundtrip.md  009-sprint3-dsl-contract-spec.md
docs/features/: audit-bundle.md  cost-scenarios.md  gpu-acceleration.md  report-system.md  risk-management.md  strategy-dsl.md
docs/operations/: troubleshooting.md
docs/optimization/: gpu-setup.md  optimizer-guide.md
docs/strategy/: development-guide.md
docs/testing/: acceptance.md
src/quantengine/: __init__.py  check_deps.py  cli.py  config.py  logging_config.py
src/quantengine/audit/: __init__.py  bundle.py  io.py  replay.py
src/quantengine/contracts/: __init__.py  spec.py
src/quantengine/data/: __init__.py  cache.py  continuous.py  gpu_backend.py  loader.py  preprocessor.py
src/quantengine/engine/: __init__.py  backtest.py  commission.py  execution.py  factory.py  portfolio.py  rules.py  slippage.py
src/quantengine/indicators/: __init__.py  base.py  gpu_compute.py  registry.py  technical.py
src/quantengine/interface/: __init__.py  api.py  live_adapter.py
src/quantengine/metrics/: __init__.py  batch.py  performance.py  risk.py  stability.py  trade_analysis.py
src/quantengine/optimizer/: __init__.py  base.py  bayesian.py  genetic.py  grid.py  parallel.py  random_search.py  walk_forward.py
src/quantengine/strategy/: __init__.py  base.py  dsl.py  registry.py  signal.py
src/quantengine/strategy/examples/: __init__.py  psar_trade_assist_v3.py  psar_trade_assist_v4.py  rsi_mean_reversion.py  sma_cross.py
src/quantengine/visualization/: __init__.py  heatmaps.py  plots.py  reports.py
tests/: conftest.py  test_acceptance.py  test_check_deps.py  test_cli.py  test_metrics.py  test_portfolio.py  test_psar_v3_acceptance.py  test_psar_v4_acceptance.py  test_strategy.py
tests/audit/: test_audit_bundle.py  test_audit_io.py
tests/contracts/: test_spec.py
tests/engine/: test_commission.py  test_cost_scenarios.py  test_portfolio.py  test_rules.py  test_slippage.py
tests/fixtures/: sample_500_bars.csv
tests/indicators/: test_registry.py  test_technical.py
tests/metrics/: test_performance.py  test_stability_extras.py
tests/strategy/: test_dsl.py
